vlib/v/tests/no_closures/method_closure.out
vlib/v/tests/no_closures/method_closure.vv:9:15: cgen error: a closure was generated for m.name: member
    7 | 
    8 | fn main() {
    9 |     x := UInt(4).member // generate an implicit closure that captures the receiver 4
      |                  ~~~~~~
   10 |     res := x()
   11 |     assert res == 40
